[package]
name = "quick-score"
version = "0.1.0"
edition = "2021"

[lib]
name = "quick_score_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "quick-score"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
